2005-08-28  Sam Steingold  <sds@gnu.org>

	* modules/regexp/regex_internal.c, modules/regexp/regex_internal.h:
	* modules/regexp/regexec.c, modules/regexp/regex.c: sync with gnulib
	* modules/regexp/test.tst: fixed the tests whose behavior changed
	during the transition from to the multi-byte version

2005-08-28  Sam Steingold  <sds@gnu.org>

	Danish messages from Dennis Decker Jensen <dennisdjensen@tiscali.dk>
	* configure.in (ALL_LINGUAS): added `da'
	* constsym.d (danish): added
	* init.lisp (danish.lisp) [GETTEXT UNICODE]: load
	* danish.lisp: new file
	* spvw_language.d (language_danish): added
	(current_language_o, init_language): handle it
	(init_language_from): check for Danish
	* makemake.in (LPARTS) [$with_unicode]: added danish

2005-08-28  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe-object): use "~:p" instead of "~:*~[~;~:;s~]"

2005-08-28  Sam Steingold  <sds@gnu.org>

	moved PARI i/o from Lisp to C to enable C++ compilation ("const" issues)
	* modules/pari/cpari.c (clispPutc, clispPuts, clispFlush)
	(clispErrPutc, clispErrPuts, clispErrFlush, clispErrDie): added
	* modules/pari/pari.lisp (pari-putc, pari-puts, pari-flush)
	(pari-err-putc, pari-err-puts, pari-err-flush, pari-err-die): removed

2005-08-26  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (Handle) [UNIX]: use emit_typedef and define to int

2005-08-26  Sam Steingold  <sds@gnu.org>

	* lispbibl.d, errunix.d, errwin32.d (errno_out_low):
	renamed from errno_out(), accept __FILE__ and __LINE__
	* error.d: do not #undef errno_out
	* lispbibl.d (errno_out): define always,
	passing __FILE__ and __LINE__ to errno_out_low()

2005-08-26  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (makemake): substitute @PACKAGE_VERSION@

2005-08-26  Sam Steingold  <sds@gnu.org>

	* makemake.in: avoid putting ${} into Makefile, use $() instead

2005-08-26  John Hinsdale <hin@alma.com>

	* modules/oracle/oracle.lisp, orafns.c: Handle Oracle BLOB data