@@ -1,5 +1,9 @@
 2005-08-28  Sam Steingold  <sds@gnu.org>
 
+	* noreadline.d: add prototypes to avoid warnings
+
+2005-08-28  Sam Steingold  <sds@gnu.org>
+
 	* modules/regexp/regex_internal.c, modules/regexp/regex_internal.h:
 	* modules/regexp/regexec.c, modules/regexp/regex.c: sync with gnulib
 	* modules/regexp/test.tst: fixed the tests whose behavior changed
